syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

import "pangu/proto/product.proto";

message ProductListRequest {
  string Query = 1 [json_name="query"];
  int64 Page = 2  [json_name="page"];
  int64 Limit = 3 [json_name="limit"];
  string sort = 5 [json_name="sort"];
}

message ProductListResponse {
  int64 Page = 1 [json_name="page"];
  int64 Limit = 2 [json_name="limit"];
  int64 Total = 3 [json_name="total"];
  bool hasNext = 4 [json_name="has_next"];
  ProductList Data = 6 [json_name="data"];
}

message ProductList {
  repeated Product Products = 1 [json_name="products"];
}
